--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,60 +1,114 @@
 /*
-	Read Only by HTML5 UP
+	Big Picture by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
+/* Section/Article */
 
-	code,
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea,
-	.box,
-	.image,
-	.image img,
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	.button {
-		position: relative;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
+	section > .last-child,
+	article > .last-child,
+	section.last-child,
+	article.last-child {
+		margin-bottom: 0;
 	}
 
 /* Form */
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select {
-		line-height: 2.75em;
+	form input[type="text"],
+	form input[type="email"],
+	form input[type="password"],
+	form select,
+	form textarea {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
+		border: solid 1px #ccc;
 	}
-
-	input[type="checkbox"],
-	input[type="radio"] {
-		-moz-appearance: normal;
-		-webkit-appearance: normal;
-		-ms-appearance: normal;
-		appearance: normal;
-	}
-
-		input[type="checkbox"] + label,
-		input[type="radio"] + label {
-			padding: 0 0 0 1.5em;
-		}
-
-			input[type="checkbox"] + label:before,
-			input[type="radio"] + label:before {
-				display: none;
-			}
 
 /* Button */
 
-	input[type="submit"].alt,
-	input[type="reset"].alt,
-	input[type="button"].alt,
-	.button.alt {
-		border: solid 2px #e4e4e4;
+	input[type="button"],
+	input[type="submit"],
+	input[type="reset"],
+	.button,
+	button {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
+
+		input[type="button"].down,
+		input[type="submit"].down,
+		input[type="reset"].down,
+		.button.down,
+		button.down {
+			text-indent: 0;
+		}
+
+/* Intro */
+
+	#intro {
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+		background: url("../../images/intro.jpg");
+		background-size: cover;
+	}
+
+		#intro .content {
+			position: relative;
+			z-index: 1;
+		}
+
+		#intro:after {
+			content: '';
+			background: url("images/overlay.png");
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+
+/* One */
+
+	#one {
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+		background: url("../../images/one.jpg");
+		background-size: cover;
+	}
+
+		#one .content {
+			position: relative;
+			z-index: 1;
+		}
+
+		#one.left:before, #one.right:after {
+			content: '';
+			background: url("images/overlay.png");
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+
+/* Two */
+
+	#two {
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+		background: url("../../images/two.jpg");
+		background-size: cover;
+	}
+
+		#two .content {
+			position: relative;
+			z-index: 1;
+		}
+
+		#two.left:before, #two.right:after {
+			content: '';
+			background: url("images/overlay.png");
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
