--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,12 +10,52 @@
 
 /* Reset */
 
+	/* Add Nanum fonts */
+
+	@font-face {
+		font-family: NanumSquareNeo;
+		src: url("./fonts/NanumSquareNeoOTF-aLt.otf") format('truetype');
+		font-weight: 200;
+	}
+	@font-face {
+		font-family: NanumSquareNeo;
+		src: url("./fonts/NanumSquareNeoTTF-bRg.eot?#iefix") format('embedded-opentype'),
+			url("./fonts/NanumSquareNeoTTF-bRg.woff2") format('woff2'),
+			url("./fonts/NanumSquareNeoTTF-bRg.woff") format('woff'),
+			url("./fonts/NanumSquareNeoOTF-bRg.otf") format('opentype');
+		font-weight: 400;
+	}
+	@font-face {
+		font-family: NanumSquareNeo;
+		src: url("./fonts/NanumSquareNeoTTF-cBd.eot?#iefix") format('embedded-opentype'),
+			url("./fonts/NanumSquareNeoTTF-cBd.woff2") format('woff2'),
+			url("./fonts/NanumSquareNeoTTF-cBd.woff") format('woff'),
+			url("./fonts/NanumSquareNeoOTF-cBd.otf") format('opentype');
+		font-weight: 700;
+	}
+	
+	@font-face {
+		font-family: NanumMyeongjo;
+		src: url("./fonts/NanumMyeongjo.otf") format('truetype');
+		font-weight: 200;
+	}
+	@font-face {
+		font-family: NanumMyeongjo;
+		src: url("./fonts/NanumMyeongjoBold.otf") format('truetype');
+		font-weight: 400;
+	}
+	@font-face {
+		font-family: NanumMyeongjo;
+		src: url("./fonts/NanumMyeongjoExtraBold.otf") format('truetype');
+		font-weight: 700;
+	}
+
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
 		border: 0;
 		font-size: 100%;
-		font: inherit;
+		font: NanumSquareNeo, inherit;
 		vertical-align: baseline;
 	}
 
