--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,6 +56,7 @@
 		border: 0;
 		font-size: 100%;
 		font-family: NanumSquareNeo !important;
+		font-weight: 400 !important;
 		/* font: NanumSquareNeo, inherit; */
 		vertical-align: baseline;
 	}
